Fix css alignment issues

--- a/new/assets/css/styles.css
+++ b/new/assets/css/styles.css
@@ -1875,6 +1875,17 @@ li .fa {
   margin-bottom: 0;
 }
 
+.work-img {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.work-img img {
+  width: inherit !important;
+  margin: 0 auto;
+}
+
+
 /*
     ==============
       EDUCATION
